# ardupilot-rover-plugin

./: LICENSE.md  README.md
aircraft_plugin/src/: aircraft_plugin.cpp
ardupilot_sitl_gazebo_plugin/: CMakeLists.txt  LICENSE.md
ardupilot_sitl_gazebo_plugin/launch/: rover_circuit.launch
ardupilot_sitl_gazebo_plugin/urdf/: erlecopter.xacro  erlecopter_base.xacro  gps_home_location.xacro  rover.urdf  rover_scaled.urdf
ardupilot_sitl_gazebo_rover_plugin/: CHANGELOG.md  CMakeLists.txt  CMakeLists.txt~  README.md  package.xml
ardupilot_sitl_gazebo_rover_plugin/launch/: LFLY_world_cessna.launch  almost_empty_world.launch  cessna_spawn.launch  copter_circuit.launch  copter_circuit.launch~  empty_world.launch  empty_world_cessna.launch  erlecopter_mark.launch  erlecopter_spawn.launch  iris_spawn.launch  outdoor_drcsim.launch  outdoor_village.launch  outdoor_village_flat.launch  powerplant.launch  rover_circuit.launch  rover_circuit1.launch  rover_circuit1.launch~  rover_maze.launch  rover_spawn.launch  wallfollow_test_world.launch  warehouse.launch
ardupilot_sitl_gazebo_rover_plugin/src/: SocketAPM.cpp  apm_plugin_apm_side.cpp  apm_plugin_gazebo_side.cpp  apm_plugin_parachute.cpp  apm_plugin_ros_side.cpp~  ardupilot_sitl_gazebo_rover_plugin.cpp~
ardupilot_sitl_gazebo_rover_plugin/urdf/: aircraft_base.xacro  cessna.xacro  cessna_base.xacro  erlecopter.xacro  iris.xacro  (+6 more)
aruco_mark_plugin/: CMakeLists.txt  README.md  package.xml
aruco_mark_plugin/src/: mark_plugin.cpp
liftdrag_rover_plugin/: CMakeLists.txt~  package.xml
recorder_camera_plugin/: package.xml
(+51 files in other folders)
