cmake_minimum_required(VERSION 2.8.3)
project(mark_plugin)

find_package(catkin REQUIRED COMPONENTS)

include_directories(include ${catkin_INCLUDE_DIRS})

## Find gazebo
find_package(gazebo REQUIRED)
include_directories(${GAZEBO_INCLUDE_DIRS})
link_directories(${GAZEBO_LIBRARY_DIRS})

###########
## Build ##
###########

add_library(${PROJECT_NAME}
  src/mark_plugin.cpp
)

target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES} ${GAZEBO_LIBRARIES})